--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "karma-webpack": "^1.5.0",
     "phantomjs": "^1.9.16",
     "react-hot-loader": "^1.2.3",
-    "webpack-dev-server": "^1.7.0"
+    "webpack-dev-server": "^1.7.0",
+    "todomvc-app-css": "^1.0.0",
+    "todomvc-common": "^1.0.1",
+    "classnames": "^2.1.2"
   },
   "dependencies": {
     "babel-core": "^5.4.7",
